--- a/fangame/makefile
+++ b/fangame/makefile
@@ -7,4 +7,4 @@ a.out: main.c
 win: a.exe
 	
 a.exe: main.cpp
-	g++ main.cpp -IC:/Raylib/include -LC:/Raylib/lib -lraylib -lopengl32 -lgdi32 -lwinmm -mwindows -static-libstdc++ -static-libgcc -static ./src/leveldata.cpp ./src/player.cpp ./src/world.cpp
+	g++ main.cpp -IC:/Raylib/include -LC:/Raylib/lib -lraylib -lopengl32 -lgdi32 -lwinmm -mwindows -static-libstdc++ -static-libgcc -static ./src/leveldata.cpp ./src/player.cpp ./src/world.cpp ./src/boss.cpp
