--- a/multi/makefile
+++ b/multi/makefile
@@ -7,4 +7,4 @@ a.out: main.c
 win: a.exe
 	
 a.exe: main.c
-	gcc -fdiagnostics-color=always -g main.c -IC:/Raylib/include -LC:/Raylib/lib -lraylib -lopengl32 -lgdi32 -lwinmm -std=c99 testgame.c
+	gcc -fdiagnostics-color=always -g main.c -IC:/Raylib/include -LC:/Raylib/lib -lraylib -lopengl32 -lgdi32 -lwinmm -std=c99 fruitclicker.c -LC:\Users\Jack\dev\raylib\molten\src C:\Users\Jack\dev\raylib\molten\src\timer.c testgame2.c
