--- a/multi/.vscode/settings.json
+++ b/multi/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "molten.h": "c",
-        "raymath.h": "c"
+        "raymath.h": "c",
+        "stdio.h": "c",
+        "math.h": "c",
+        "raylib.h": "c"
     }
 }
