--- a/multi/makefile
+++ b/multi/makefile
@@ -2,7 +2,7 @@ run: a.out
 	./a.out
 
 a.out: main.c
-	gcc main.c -I/home/jack/Documents/Raylib/include/ -L/home/jack/Documents/Raylib/lib -L/usr/local/lib -lraylib -lGL -lm -ldl -lpthread -ldl -lrt -lX11 -I/home/jack/dev/raylib/molten/include -L/home/jack/dev/raylib/molten/src ../molten/src/timer.c ./src/digipet.c ./src/fruitclicker.c ./src/menu.c ./src/pong.c
+	gcc main.c -I/home/jack/Documents/Raylib/include/ -L/home/jack/Documents/Raylib/lib -L/usr/local/lib -lraylib -lGL -lm -ldl -lpthread -ldl -lrt -lX11 -I/home/jack/dev/raylib/molten/include -L/home/jack/dev/raylib/molten/src ../molten/src/timer.c ./src/digipet.c ./src/fruitclicker.c ./src/menu.c ./src/pong.c -lm
 
 win: a.exe
 	
