add circle game

--- a/multi/makefile
+++ b/multi/makefile
@@ -1,8 +1,8 @@
 lin: a.out
 	./a.out
 
-a.out: main.c
-	gcc main.c -I/home/jack/Documents/Raylib/include/ -L/home/jack/Documents/Raylib/lib -L/usr/local/lib -lraylib -lGL -lm -ldl -lpthread -ldl -lrt -lX11 -I/home/jack/dev/raylib/molten/include -L/home/jack/dev/raylib/molten/src ../molten/src/timer.c ./src/digipet.c ./src/fruitclicker.c ./src/menu.c ./src/pong.c -lm
+a.out: main.c ./src/fruitclicker.c ./src/digipet.c ./src/menu.c ./src/pong.c ./src/circle.c
+	gcc main.c -I/home/jack/Documents/Raylib/include/ -L/home/jack/Documents/Raylib/lib -L/usr/local/lib -lraylib -lGL -lm -ldl -lpthread -ldl -lrt -lX11 -I/home/jack/dev/raylib/molten/include -L/home/jack/dev/raylib/molten/src ../molten/src/timer.c ./src/digipet.c ./src/fruitclicker.c ./src/menu.c ./src/pong.c ./src/circle.c -lm
 
 win: a.exe
 	
