win makefile updated

--- a/multi/makefile
+++ b/multi/makefile
@@ -6,5 +6,5 @@ a.out: main.c ./src/fruitclicker.c ./src/digipet.c ./src/menu.c ./src/pong.c ./s
 
 win: a.exe
 	
-a.exe: main.c ./src/fruitclicker.c ./src/digipet.c ./src/menu.c ./src/pong.c
-	gcc -fdiagnostics-color=always -g main.c -IC:/Raylib/include -LC:/Raylib/lib -lraylib -lopengl32 -lgdi32 -lwinmm -std=c99 -LC:\Users\Jack\dev\raylib\molten\src C:\Users\Jacka\dev\raylib\molten\src\timer.c C:\Users\Jacka\dev\raylib\multi\src\fruitclicker.c C:\Users\Jacka\dev\raylib\multi\src\digipet.c C:\Users\Jacka\dev\raylib\multi\src\menu.c C:\Users\Jacka\dev\raylib\multi\src\pong.c
+a.exe: main.c ./src/fruitclicker.c ./src/digipet.c ./src/menu.c ./src/pong.c ./src/circle.c
+	gcc -fdiagnostics-color=always -g main.c -IC:/Raylib/include -LC:/Raylib/lib -lraylib -lopengl32 -lgdi32 -lwinmm -std=c99 -LC:\Users\Jack\dev\raylib\molten\src C:\Users\Jacka\dev\raylib\molten\src\timer.c C:\Users\Jacka\dev\raylib\multi\src\fruitclicker.c C:\Users\Jacka\dev\raylib\multi\src\digipet.c C:\Users\Jacka\dev\raylib\multi\src\menu.c C:\Users\Jacka\dev\raylib\multi\src\pong.c C:\Users\Jacka\dev\raylib\multi\src\circle.c
